docker/k8s/lipigas-abastecimiento-develop/01-deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-front
  namespace: ${NAMESPACE}
  labels:
    app: app-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-front
  template:
    metadata:
      labels:
        app: app-front
    spec:
      containers:
        - image: ${IMAGE_TAG}
          name: app-front
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "200m"
      imagePullSecrets:
        - name: github-registry
