docker/k8s/lipigas-abastecimiento-develop/03-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-front
  namespace: ${NAMESPACE}
spec:
  ingressClassName: nginx
  rules:
  - host: "${SITE_URL}"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-front-svc
            port:
              number: 3000
